# -

./: .gitignore  LICENSE  README.md  build_mac_backend.py  build_release.py  builtin_training.py  capture_ocr.py  chat_training.py  fill_builtin_scenarios.py  float_ui.py  generate_builtin_scenarios.py  generate_sop_flow_demo.py  llm_clients.py  mac_backend.py  macos_window.py  main.py  make_combined_doc.py  make_design_doc.py  memory.py  reply_engine.py  reply_humanize.py  requirements.txt  scenario_bank.py  self_check.py  sender.py  settings.py  sop_analyzer.py  visible_content.py  wechat_ai_reply_assistant_guide.docx  wechat_window.py  启动-显示日志.bat  启动.bat  导出今日回复到记事本.bat  导出全部每日回复.bat  导出话术总结.bat  自检.bat  自检报告.txt
.github/workflows/: macos-build.yml
docs/superpowers/plans/: 2026-06-24-phrasebook-manager.md
mac-ui/: MACOS_PERMISSIONS.md  README.md  package-lock.json  package.json
mac-ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
mac-ui/src-tauri/icons/: icon.icns
mac-ui/src-tauri/src/: lib.rs  main.rs
mac-ui/ui/: app.js  index.html  styles.css
scripts/: export_daily_replies.py  export_phrasebook_text.py
tests/: test_core.py  test_mac_backend.py  test_macos_window.py
user_data/: memory.json  settings.json  vector_memory.json  话术总结.txt  话术明细.txt
user_data/每日回复/: 2026-07-09_回复记录.txt
