[package]
name = "wechat_reply_assistant_mac"
version = "0.1.0"
edition = "2021"

[lib]
name = "wechat_reply_assistant_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
